--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -211,6 +211,121 @@
             </objects>
             <point key="canvasLocation" x="410.39999999999998" y="-2664.0179910044981"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="j83-1K-Xkw">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="XG1-ml-sF6" customClass="PageViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="CUX-ub-I49"/>
+                </pageViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fyb-9F-0wD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1463" y="-2773"/>
+        </scene>
+        <!--Card View Controller-->
+        <scene sceneID="KGn-w8-aT1">
+            <objects>
+                <viewController storyboardIdentifier="CardViewController" id="ChG-F5-aVT" customClass="CardViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YfT-kl-F8I"/>
+                        <viewControllerLayoutGuide type="bottom" id="fmT-yn-PnG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eux-x9-TJi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mk-Ab-nOt">
+                                <rect key="frame" x="67" y="199" width="241" height="179"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZj-7m-jFq">
+                                <rect key="frame" x="166" y="272" width="114" height="32"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="9mk-Ab-nOt" firstAttribute="top" secondItem="YfT-kl-F8I" secondAttribute="bottom" constant="199" id="3oy-T1-Xvn"/>
+                            <constraint firstItem="9mk-Ab-nOt" firstAttribute="leading" secondItem="eux-x9-TJi" secondAttribute="leadingMargin" constant="51" id="K0H-La-xrB"/>
+                            <constraint firstAttribute="trailing" secondItem="lZj-7m-jFq" secondAttribute="trailing" constant="167" id="KCh-dZ-qO4"/>
+                            <constraint firstItem="lZj-7m-jFq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="eux-x9-TJi" secondAttribute="leading" constant="20" symbolic="YES" id="eGk-he-4LJ"/>
+                            <constraint firstItem="fmT-yn-PnG" firstAttribute="top" secondItem="9mk-Ab-nOt" secondAttribute="bottom" constant="289" id="jGU-AM-ggW"/>
+                            <constraint firstItem="lZj-7m-jFq" firstAttribute="centerY" secondItem="eux-x9-TJi" secondAttribute="centerY" constant="-45.5" id="vd5-6G-Abk"/>
+                            <constraint firstItem="9mk-Ab-nOt" firstAttribute="centerX" secondItem="eux-x9-TJi" secondAttribute="centerX" id="wBj-gd-w6I"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="EGo-Pa-Vqg" appends="YES" id="v64-mo-nf7"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="cardView" destination="9mk-Ab-nOt" id="OvP-Sm-2mz"/>
+                        <outlet property="titleLabel" destination="lZj-7m-jFq" id="Icx-2L-FAU"/>
+                        <segue destination="na5-sC-tqi" kind="show" identifier="reveal" id="F2p-JN-d2s"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vyd-8z-Bhe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="EGo-Pa-Vqg">
+                    <connections>
+                        <action selector="handleTap" destination="ChG-F5-aVT" id="LVL-Ub-q5F"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2200.8000000000002" y="-3070.6146926536735"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="Crc-fj-tQm">
+            <objects>
+                <viewController storyboardIdentifier="RevealViewController" id="na5-sC-tqi" customClass="RevealViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Psc-37-OsJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="6uO-nh-sRV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Okx-iM-uvj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Tz-5B-9FL" customClass="QuizVideoView" customModule="LASDictionaryV2" customModuleProvider="target">
+                                <rect key="frame" x="67" y="201" width="241" height="128"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eze-oh-5uh">
+                                <rect key="frame" x="166" y="89" width="43" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMW-82-73Y">
+                                <rect key="frame" x="166" y="489" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="eze-oh-5uh" firstAttribute="centerX" secondItem="5Tz-5B-9FL" secondAttribute="centerX" id="9fp-8n-MA9"/>
+                            <constraint firstItem="eze-oh-5uh" firstAttribute="top" secondItem="Psc-37-OsJ" secondAttribute="bottom" constant="89" id="AEN-sb-Phx"/>
+                            <constraint firstItem="eze-oh-5uh" firstAttribute="leading" secondItem="bMW-82-73Y" secondAttribute="leading" id="Ga7-kX-8dT"/>
+                            <constraint firstItem="eze-oh-5uh" firstAttribute="centerX" secondItem="Okx-iM-uvj" secondAttribute="centerX" id="SuI-v7-dqD"/>
+                            <constraint firstItem="bMW-82-73Y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Okx-iM-uvj" secondAttribute="leading" symbolic="YES" id="avI-TJ-CFU"/>
+                            <constraint firstItem="6uO-nh-sRV" firstAttribute="top" secondItem="bMW-82-73Y" secondAttribute="bottom" constant="128" id="chq-UF-S1r"/>
+                            <constraint firstItem="5Tz-5B-9FL" firstAttribute="leading" secondItem="Okx-iM-uvj" secondAttribute="leadingMargin" constant="51" id="kK8-JR-cVK"/>
+                            <constraint firstAttribute="trailing" secondItem="bMW-82-73Y" secondAttribute="trailing" constant="163" id="kUs-sL-RUR"/>
+                            <constraint firstAttribute="bottom" secondItem="5Tz-5B-9FL" secondAttribute="bottom" constant="318" id="rHi-Zu-llZ"/>
+                            <constraint firstItem="5Tz-5B-9FL" firstAttribute="top" secondItem="eze-oh-5uh" secondAttribute="bottom" constant="91" id="tp4-79-0Fc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="1n6-IF-208"/>
+                    <connections>
+                        <outlet property="signView" destination="5Tz-5B-9FL" id="0W9-5E-nsw"/>
+                        <outlet property="titleLabel" destination="eze-oh-5uh" id="tzN-TO-0Np"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VXy-Zf-03G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3068" y="-3161"/>
+        </scene>
         <!--Quiz-->
         <scene sceneID="48x-Ph-Lgo">
             <objects>
@@ -224,7 +339,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ual-wo-vBN">
-                                <rect key="frame" x="134" y="95" width="77.5" height="20.5"/>
+                                <rect key="frame" x="134" y="51" width="77.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -296,7 +411,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pwx-xx-quN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1456.8" y="-2426.5367316341831"/>
+            <point key="canvasLocation" x="2860" y="-2504"/>
         </scene>
         <!--Results View Controller-->
         <scene sceneID="bdL-iL-fpE">
@@ -307,17 +422,17 @@
                         <viewControllerLayoutGuide type="bottom" id="dg7-yI-A3r"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="K9T-Nw-Z9J">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YJI-Tl-oBI">
-                                <rect key="frame" x="150" y="135" width="69" height="35"/>
+                                <rect key="frame" x="150" y="91" width="69" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You Got X/X Correct" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyi-Vk-9SZ">
-                                <rect key="frame" x="94" y="323" width="155" height="21"/>
+                                <rect key="frame" x="94" y="313" width="155" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -341,7 +456,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xti-GK-jGA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2280" y="-2438"/>
+            <point key="canvasLocation" x="3682" y="-2516"/>
         </scene>
         <!--Favorites Table View Controller-->
         <scene sceneID="GJc-8b-MUM">
@@ -515,8 +630,8 @@
                     <connections>
                         <segue destination="H0e-sS-q81" kind="relationship" relationship="viewControllers" id="hba-l6-PWc"/>
                         <segue destination="ygl-J1-r33" kind="relationship" relationship="viewControllers" id="SLJ-0r-pMD"/>
-                        <segue destination="ZBg-HQ-Yoo" kind="relationship" relationship="viewControllers" id="cSM-d6-ju8"/>
                         <segue destination="2u0-aC-a67" kind="relationship" relationship="viewControllers" id="4t4-mE-3NZ"/>
+                        <segue destination="XG1-ml-sF6" kind="relationship" relationship="viewControllers" id="39e-Sb-s3v"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4R5-Qf-wJm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
